fix duplicate overflow

--- a/src/styles/pages/QueriesPage.scss
+++ b/src/styles/pages/QueriesPage.scss
@@ -261,6 +261,12 @@
 
     .splitter-layout {
       position: unset !important;
+
+      .layout-pane {
+        &:first-child {
+          overflow: hidden !important;
+        }
+      }
     }
 
     .btn-expand-public {
